--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -43,3 +43,29 @@ html{
         opacity: 1;
     }
 }
+
+
+/* -----------------MODAL------------- */
+.modal{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+}
+
+.mode__overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    
+}
+
+.modal__container{
+    background-color: var(--white-color);
+    margin: auto;
+    z-index: 1;
+    border-radius: 5px;
+}
