--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -3,6 +3,7 @@
     --black-color: #000;
     --text-color: #333;
     --primary-color: #ee4d2d;
+    --border-color:#dbdbdb;
 }
 
 *{
@@ -44,6 +45,14 @@ html{
     }
 }
 
+@keyframes growth{
+    from{
+        transform: scale(--growth-from);
+    }
+    to{
+        transform: scale(--growth-to);
+    }
+}
 
 /* -----------------MODAL------------- */
 .modal{
@@ -53,6 +62,7 @@ html{
     bottom: 0;
     left: 0;
     display: flex;
+    animation: fadeIn linear 0.1s;
 }
 
 .mode__overlay{
@@ -64,8 +74,36 @@ html{
 }
 
 .modal__container{
+    --growth-from: 0.7;
+    --growth-to: 0.1;
     background-color: var(--white-color);
     margin: auto;
     z-index: 1;
     border-radius: 5px;
+    animation:growth linear 0.1s ;
+}
+
+/* Button style */
+.btn{
+    min-width: 142px;
+    padding: 10px;
+    text-decoration: none;
+    border: none;
+    border-radius: 2px;
+    font-size: 1.4rem;
+    outline: none;
+    cursor: pointer;
+}
+.btn.btn--primary{
+    background: var(--primary-color);
+    color: var(--white-color);
+
+}
+
+.btn.btn--disable{
+    cursor: default;
+}
+
+.btn.btn--size-s{
+   padding: 8px 4px; 
 }
