--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -230,3 +230,121 @@
     text-align: center;
     width: 100%;
 }
+
+/* -------------------------------------AUTH FORM---------------------------------- */
+.auth-form{
+    width: 500px;
+}
+.auth-form__container{
+    padding: 0 32px;
+}
+
+.auth-form__header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 12px;
+}
+
+.auth-form__heading{
+    font-size: 2.4rem;
+    font-weight: 500;
+    color: var(--text-color);
+}
+
+.auth-form__switch-btn{
+    font-size: 1.6rem;
+    color: var(--primary-color);
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.auth-form__form{
+}
+
+.auth-form__input{
+    width: 100%;
+    height: 40px;
+    margin-top: 16px;
+    padding: 0 12px;
+    font-size: 1.4rem;
+    border: 1px solid var(--border-color);
+    border-radius: 2px;
+    outline: none;
+}
+
+.auth-form__input:focus{
+    border-color: #777;
+}
+
+.auth-form__aside{
+    margin-top: 16px;
+}
+.auth-form__policy-text{
+    font-size: 1.2rem;
+    font-weight: 500;
+    text-align: center;
+    padding: 0 12px;
+    line-height: 1.6rem;
+}
+
+.auth-form__texr-link{
+    text-decoration: none;
+    color: var(--primary-color);
+}
+
+.auth-form__controls{
+    margin-top: 80px;
+    display: flex;
+    justify-content: flex-end;
+}
+.auth-form__controls-back{
+    margin-right: 8px;
+}
+.auth-form__socials{
+    background-color: #d8d8d8;
+    padding: 8px 32px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 12px;
+}
+
+.auth-form__socials--facebook{
+    background-color: #1877f2;
+    color: var(--white-color);
+}
+.auth-form__socials-text{
+    margin: 0 28px;
+}
+
+.btn-icon{
+    margin-left: 12px;
+}
+
+.auth-form__socials--google{
+    background-color: var(--white-color);
+    color: var(--text-color);
+}
+
+.auth-form__help{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.auth-form__help-link{
+    text-decoration: none;
+    font-size: 1.4rem;
+    color: #939393;
+}
+
+.auth-form__help-separate{
+    display: block;
+    border-left: 1px solid var(--border-color);
+    height: 1.6rem;
+    margin: 0 16px;
+}
+
+.auth-form__help-forgot{
+    color: var(--primary-color);
+}
