--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 .header{
-    height: 120px;
+    height: var(--header-height);
     background-image: linear-gradient(0,#f63,#f53d2d);
 }
 .header__navbar{
@@ -11,6 +11,7 @@
     list-style: none;
     padding-left: 0;
     margin-top:6px;
+    margin: 4px 0 0 0;
 }
 
 .header__navbar-item{
@@ -260,6 +261,7 @@
 }
 
 .auth-form__form{
+    
 }
 
 .auth-form__input{
@@ -347,4 +349,212 @@
 
 .auth-form__help-forgot{
     color: var(--primary-color);
+}
+
+
+/* ------------------------------------HEADER WITH SEARCH--------------------------------- */
+.header-with-search{
+    height: var(--header-with-search-height);
+    display: flex;
+    align-items: center;
+    padding: 0 8px;
+}
+
+.header__logo{
+    width: 200px;
+}
+
+.header__logo-img{
+    width: 150px;
+}
+
+.header__search{
+    background-color: var(--white-color);
+    flex: 1;
+    height: 40px;
+    display: flex;
+    align-items: center;
+}
+
+.header__search-input-wrap{
+    flex: 1;
+    height: 100%;
+    position: relative;
+}
+/* ------------SEARCH HISTORY-------------- */
+.header__search-history{
+    position: absolute;
+    top: 117%;
+    left: 0;
+    width: calc(100% - 16px);
+    background-color: var(--white-color);
+    border-radius: 3px;
+    box-shadow: 0 1px 3px rgb(184, 183, 183);
+    display: none;
+}
+
+.header__search-history-heading{
+    padding: 0 16px;
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: #999;
+}
+
+.header__search-history-list{
+    padding-left: 0;
+    list-style: none;
+    margin: 0;
+}
+
+.header__search-history-item{
+    padding: 8px 16px;
+    
+}
+
+.header__search-history-item:hover{
+    background-color: #fafafa;
+   
+}
+
+.header__search-history-item:last-child{
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+
+.header__search-history-item a{
+    text-decoration: none;
+    font-size: 1.4rem;
+    color: var(--text-color);
+}
+
+.header__search-input{
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    font-size: 1.4rem;
+    color: var(--text-color);
+    padding: 0 16px;
+    border-radius: 3px;
+}
+
+.header__search-input:focus ~ .header__search-history{
+    display: block;
+}
+
+.header__search-select{
+    border-left: 1px solid #ccc;
+    padding: 8px 0 8px 16px;
+    position: relative;
+    cursor: pointer;
+
+}
+
+.header__search-select:hover .header__search-option{
+    display: block;
+}
+
+.header__search-option{
+    position: absolute;
+    right: 0;
+    top: 100%;
+    list-style: none;
+    width: 120px;
+    padding-left: 0;
+    box-shadow: 0 1px 2px #ccc;
+    border-radius: 3px;
+    cursor: pointer;
+    display: none;
+    animation: fadeIn ease-in 0.2s;
+}
+
+.header__search-option::before{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 10px;
+    position: absolute;
+    top: -10px;
+    right: 0;
+}
+
+.header__search-option-item{
+    background-color: var(--white-color);
+    border-radius: 2px;
+    padding: 8px;
+}
+
+.header__search-option-item:first-child{
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+}
+
+.header__search-option-item:last-child{
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+
+
+.header__search-option-item:hover{
+    background-color: #fafafa;
+}
+
+.header__search-option-item span{
+    font-size: 1.4rem;
+    color: var(--text-color);
+}
+
+.header__search-option-item i{
+    font-size: 1.4rem;
+    color: var(--primary-color);
+    margin: 0 4px 0 12px;
+    display: none;
+}
+
+.header__search-option-item--active i{
+    display: inline-block;
+}
+
+.header__search-select-label{
+    font-size: 1.4rem;
+    color: var(--text-color);
+}
+
+.header__search-select-icon{
+    font-size: 1.4rem;
+    color: var(--text-color);
+    margin: 0 8px;
+    position: relative;
+    top: 1px;
+}
+
+.header__search-btn{
+    background-color: var(--primary-color);
+    border: none;
+    height: 36px;
+    margin: 0 2px;
+    padding: 0 16px;
+    border-radius: 2px;
+    outline: none;
+    cursor: pointer;
+}
+
+.header__search-btn:hover{
+    background-color: #e96146;
+}
+
+.header__search-btn-icon{
+    font-size: 1.4rem;
+    color: var(--white-color);
+}
+
+.header__cart{
+    width: 150px;
+    text-align: center;
+}
+
+.header__cart-icon{
+    color:var(--white-color);
+    font-size: 2.4rem;
+    margin-top: 1px;
 }
