--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -812,6 +812,10 @@
     background-color: #f5f5f5;
 }
 
+.app__content{
+    padding-top: 36px;
+}
+
 .category{
     background-color: var(--white-color);
     border-radius: 2px;
@@ -822,6 +826,7 @@
     color: var(--text-color);
     padding: 12px 16px;
     border-bottom:solid 1px rgba(0, 0, 0, 0.05);
+    margin-top: 0;
 }   
 
 .category__heading-icon{
@@ -833,10 +838,6 @@
     padding: 0 0 8px 0;
     list-style: none;
     margin-left: 12px;
-}
-
-.category-item{
-
 }
 
 .category-item--active .category-item__link{
