--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -47,7 +47,7 @@ html{
     width: 16.667%;
 }
 
-.grid__column-8{
+.grid__column-10{
     padding-left: 12px;
     padding-right: 12px;
     width: 83.334%;
@@ -126,4 +126,56 @@ html{
 
 .btn.btn--size-s{
    padding: 8px 4px; 
+}
+
+/* SELECTION */
+
+.select-input{
+    position: relative;
+    min-width: 200px;
+    padding: 10px;
+    border-radius: 2px;
+    background-color: var(--white-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.select-input:hover .select-input__list{
+    display: block;
+}
+
+.select-input__label{
+    font-size: 1.4rem;
+}
+
+.select-input__icon{
+    font-size: 1.4rem;
+    color: rgb(131, 131, 131);
+    position: relative;
+    top: 1px;
+}
+
+.select-input__list{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 27px;
+    border-radius: 2px;
+    background-color: var(--white-color);
+    padding: 8px 12px;
+    list-style:none;
+    display: none;
+}
+
+.select-input__link{
+    font-size: 1.4rem;
+    text-decoration: none;
+    color: var(--text-color);
+    display: block;
+    padding: 4px;
+    
+}
+.select-input__link:hover{
+    color: var(--primary-color);
 }
