--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -165,6 +165,8 @@
     border-radius: 2px;
     display: none;
     animation: fadeIn ease 0.3s;
+    z-index: 1;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .header__qr::before{
@@ -467,6 +469,7 @@
     border-radius: 3px;
     box-shadow: 0 1px 3px rgb(184, 183, 183);
     display: none;
+    z-index: 1;
 }
 
 .header__search-history-heading{
@@ -543,6 +546,7 @@
     cursor: pointer;
     display: none;
     animation: fadeIn ease-in 0.2s;
+    z-index: 1;
 }
 
 .header__search-option::before{
@@ -672,6 +676,7 @@
     animation: fadeIn ease-in 0.2s;
     cursor: default;
     display: none;
+    z-index: 1;
 }
 
 .header__cart-list::after{
@@ -722,6 +727,7 @@
 .header__cart-list-item{
     padding-left: 0;
     list-style: none;
+    overflow-y: auto;
 }
 
 .header__cart-item{
@@ -761,6 +767,15 @@
     color: var(--text-color);
     margin: 0 0;
     cursor: pointer;
+    line-height: 2rem;
+    max-height: 4rem;
+    overflow: hidden;
+    flex: 1;
+    padding-right: 16px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    text-align: left;
 }
 
 .header__cart-item-price{
@@ -822,36 +837,39 @@
 }
 
 .category__heading{
-    font-size: 1.7rem;
+    font-size: 1.6rem;
+    font-weight: 500;
     color: var(--text-color);
-    padding: 12px 16px;
-    border-bottom:solid 1px rgba(0, 0, 0, 0.05);
+    padding: 16px 16px 0;
     margin-top: 0;
+    text-transform: uppercase;
 }   
-
-.category__heading-icon{
-    font-size: 1.4rem;
-    margin-right: 4px;
-}
 
 .category-list{
     padding: 0 0 8px 0;
     list-style: none;
-    margin-left: 12px;
+}
+
+.category-item{
+    position: relative;
+
+}
+
+.category-item:first-child::before{
+    display: none;
+} 
+
+.category-item::before{
+    content: "";
+    border-top: 1px solid #E1e1e1;
+    position: absolute;
+    top: 0;
+    left: 20px;
+    right: 20px;
 }
 
 .category-item--active .category-item__link{
     color: var(--primary-color);
-}
-
-.category-item--active .category-item__link::after{
-    content: "";
-    position: absolute;
-    border: 4px solid;
-    border-color: transparent transparent transparent var(--primary-color);
-    left: 4px;
-    top: 50%;
-    transform: translateY(-55%);
 }
 
 .category-item__link{
@@ -859,14 +877,13 @@
     text-decoration: none;
     color: var(--text-color);
     font-size: 1.5rem;
-    padding: 8px 16px;
+    padding: 12px 20px;
     display: block;
-    transform: right linear 0.1s;
     right: 0;
+
 }
 
 .category-item__link:hover{
-    right: -4px;
     color: var(--primary-color);
 }
 
@@ -953,8 +970,7 @@
     position: relative;
     background-color: var(--white-color);
     margin-top: 10px;
-    border-bottom-right-radius: 2px;
-    border-bottom-left-radius: 2px;
+    border-radius: 2px;
     box-shadow: 0 0.1rem 0.2rem rgba(0, 0, 0, 0.1);
     transition: transform linear 0.1s;
     will-change: transform;
@@ -973,6 +989,8 @@
     padding-top: 100%;
     background-size: contain;
     background-repeat: no-repeat;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
 }
 .home-product-item__name{
     font-size: 1.4rem;
@@ -1091,6 +1109,7 @@ i.home-product-item__like-icon-fill{
     height: 36px;
     text-align: center;
     background-color: rgba(255, 216, 64, 0.9);
+    border-top-right-radius: 2px;
 }
 
 .home-product-item__sale-off::after{
