--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -186,3 +186,36 @@ html{
 .select-input__link:hover{
     color: var(--primary-color);
 }
+
+
+/* ---------------------------pagination------------------------- */
+.pagination{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+}
+
+.pagination-item{
+    margin: 0 16px;
+}
+
+.pagination-item__link{
+    display: block;
+    text-decoration: none;
+    font-size: 1.6rem;
+    color: #939393;
+    min-width: 40px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    border-radius: 2px;
+}
+
+.pagination-item--active .pagination-item__link{
+    background-color: var(--primary-color);
+    color: var(--white-color);
+}
+.pagination-item__icon{
+
+}
