--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1136,3 +1136,84 @@ i.home-product-item__like-icon-fill{
     margin-top: 48px ;
     margin-bottom: 32px;
 }
+
+
+
+/*------------------------------------------ FOOTER------------------ */
+
+.footer{
+    padding-top: 16px;
+    border-top: 4px solid var(--primary-color);
+    background-color: var(--white-color);
+}
+
+.footer__heading{
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    color: var(--text-color);
+}
+
+.footer-list{
+    list-style: none;
+    padding-left: 0;
+}
+
+.footer-item{
+    list-style: none;
+}
+.footer-item__link{
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: #737373;
+    display: block;
+    padding: 4px 0;
+    display: flex;
+    align-items: center;
+}
+
+.footer-item__link:hover{
+    color: var(--primary-color);
+}
+
+.footer-item__icon{
+    font-size: 1.6rem;
+    margin-top: -1px;
+    margin-right: 8px;
+}
+
+.footer__download{
+    display: flex;
+}
+
+.footer__download-qr{
+    width: 80px;
+    align-self: center;
+    border: solid 1px var(--border-color);
+}
+
+.footer__download-apps{
+    margin-left: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.footer__download-apps a{
+    text-decoration: none;
+}
+
+.footer__download-apps-img{
+    height: 16px;
+}
+
+.footer__bottom{
+    background-color: #f5f5f5;
+    padding: 8px 0;
+    
+}
+
+.footer__copyright{
+    margin: 0;
+    text-align: center;
+    font-size: 1.4rem;
+}
