--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
+.wrapper{
+    overflow: hidden;
+}
+
 .header{
     height: var(--header-height);
     background-image: linear-gradient(0,#f63,#f53d2d);
@@ -438,10 +442,21 @@
     padding: 0 8px;
 }
 
+.header__mobile-search{
+    padding: 0 12px;
+}
+.header__mobile-search-icon{
+    font-size: 2.6rem;
+    color: var(--white-color);
+}
 .header__logo{
     width: 200px;
 }
 
+.header__logo-link{
+    display: block;
+    line-height: 0;
+}
 .header__logo-img{
     width: 150px;
 }
@@ -1134,8 +1149,8 @@ i.home-product-item__like-icon-fill{
 }
 
 .home-product__pagination{
-    margin-top: 48px ;
-    margin-bottom: 32px;
+    margin: 48px 0 32px 0;
+    padding-left:0;
 }
 
 
