--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -46,7 +46,74 @@
 }
 /* Mobile */
 @media (max-width:739px){
+    
+
     .hide-on-mobile{
         display: none;
+    }
+
+    .header-with-search{
+        justify-content: space-between;
+    }
+
+    .header__logo{
+        width: unset;
+    }
+
+    .header__cart{
+        width: unset;
+    }
+
+
+    .header__search-checkbox:checked ~ .header__search{
+        display: flex;
+    }
+
+    .header__search{
+        position: fixed;
+        top: var(--header-height);
+        left: 0;
+        right: 0;
+        height: var(--header-sort-bar-height);
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.02);
+        z-index: 1;
+        border: 1px solid var(--border-color);
+        padding: 0 8px;
+        animation: moblieSearchSideIn linear 0.3s;
+        display: none;
+    }
+
+    .header__search-history{
+        position: fixed;
+        top: calc(var(--header-height) + var(--header-sort-bar-height));
+        left: 0;
+        width: 100%;
+        border-radius: unset;
+    }
+
+    .app__content{
+        margin: 0 4px;
+    }
+
+    .pagination-item{
+        margin: 0;
+
+    }
+
+    .pagination-item__link{
+        --height:28px;
+        font-size: 1.6rem;
+        min-width: 36px;
+    }
+
+    @keyframes moblieSearchSideIn {
+        from{
+            top: calc(var(--header-height) /2);
+            opacity: 0;
+        }
+        to{
+            top: var(--header-height);
+            opacity: 1;
+        }
     }
 }
